# clash-tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
src/: app_config.rs  g.rs  main.rs  my_event.rs  substask.rs
src/clash_api/: connection.rs  log.rs  mod.rs  proxy.rs
src/clash_config/: mod.rs  subs_url.rs
src/page/: connection_page.rs  group_item_page.rs  group_page.rs  log_page.rs  mod.rs
src/page/widget/: filter_widget.rs  log_widget.rs  mod.rs  table_widget.rs
