[package]
name = "clash-tui"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0"

base64 = "0.22"
url = "2.5"
urlencoding = "2.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0", features = ["json", "blocking"] }

ratatui = "0"
crossterm = "0.28"
tokio-tungstenite = "0.24"
futures-util = "0.3"
textwrap = "0.16"
chrono = "0.4"
humansize = "2"
indexmap = "2.6"
config = "0"
